fix a small error in html code

--- a/bannerpage.html
+++ b/bannerpage.html
@@ -6,8 +6,10 @@
     <link href="bannerpage.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="banner">
-        <img src="resources/Laferrari-banner.png" />
+    <div class="laferrari-banner">
+        <h3>
+            this is a laferrari.
+        </h3>
     </div>
 </body>
 </html>
